--- a/packages/uppercase/package.json
+++ b/packages/uppercase/package.json
@@ -8,5 +8,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "5fc1de86fee9cbb96ca40ce95bc6a18470a945f3"
 }
