update package.json in all packages

--- a/packages/usage/package.json
+++ b/packages/usage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "usage",
+  "name": "ku-usage",
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
@@ -13,5 +13,5 @@
     "sometext": "^1.0.1",
     "uppercase": "^1.0.1"
   },
-  "gitHead": "5fc1de86fee9cbb96ca40ce95bc6a18470a945f3"
+  "gitHead": "ccf8433cb0c71167230cc4c937be3c804f93290d"
 }
