--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,10 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.1.0"
+  "version": "independent",
+  "command": {
+    "publish": {
+      "registry": "http://localhost:4873"
+    }
+  }
 }
