--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "independent",
+  "version": "1.2.0",
   "command": {
     "publish": {
       "registry": "http://localhost:4873"
